2-traefik/5-traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: monitoramento
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    certmanager.k8s.io/cluster-issuer: "acme-letsencrypt-production"  
spec:
  rules:
  - host: "cloudopss.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cloudopss-grafana
            port:
              number: 80
  tls:
  - hosts:
    - "cloudopss.com"
    secretName: "cloudopss-grafana"
